--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "hardhat": "^2.22.19"
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/prompts": "^2.4.9",
+    "hardhat": "^2.22.19",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "ethers": "^6.13.5",
+    "prompts": "^2.4.2"
   }
 }
